# CG

./: .gitignore
GMS101-HW/: CMakeLists.txt
GMS101-HW/hw/Homework1/Assignment1/: main.cpp  rasterizer.cpp
GMS101-HW/hw/Homework2/: main.cpp  rasterizer.cpp
GMS101-TEST/: GMS101-TEST.sln
GMS101-TEST/textureFileter/: main.cpp  textureFileter.vcxproj  transform.vcxproj.filters
GMS101-TEST/transform/: main.cpp  transform.vcxproj
resource/glsls/: coordAxis.fs  texture.fs  texture.vs
